--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ bam = "*"
 clap = { version = "3.0.14", features = ["derive"] }
 indicatif = {version = "*", features = ["rayon"]}
 rayon = "1.5"
+num_cpus = "1.13"  # Or the latest version
